--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.16.3",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "joi": "^13.2.0",
+    "morgan": "~1.9.0",
+    "mysql": "^2.15.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
