--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "start": "nodemon dist/index.bundle.js"
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-validation": "^1.0.2",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "joi": "^13.2.0",
+    "jsonwebtoken": "^8.2.1",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0"
   },
